--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,12 +1,11 @@
+---
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 version: 2
 
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
 
 builds:
@@ -20,7 +19,8 @@ builds:
 
 archives:
   - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of `uname`.
+    # this name template makes the OS and Arch compatible
+    # with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_
       {{- title .Os }}_
